# dental

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
.github/workflows/: release.yml  test.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hub.rs  lib.rs  models.rs  spoke.rs
src-tauri/src/commands/: appointments.rs  auth.rs  data.rs  insurance.rs  mod.rs  network.rs  patients.rs  payments.rs  services.rs  settings.rs  treatments.rs  users.rs
src-tauri/src/db/: mod.rs
src/components/: AppointmentForm.tsx  CheckoutDialog.tsx  DataManagement.tsx  Navigation.tsx  PatientForm.tsx  TreatmentForm.tsx
src/components/ui/: calendar.tsx  sheet.tsx
src/contexts/: AuthContext.tsx
src/lib/: dataManager.ts  pdfGenerator.ts  updater.ts  utils.ts
src/pages/: Appointments.tsx  DoctorDashboard.tsx  Index.tsx  InitialSetup.tsx  Login.tsx  NotFound.tsx  PatientSheet.tsx  Patients.tsx  Payments.tsx  Reception.tsx  Reports.tsx  Settings.tsx  Treatments.tsx  UsageGuide.tsx  UserManagement.tsx  WaitingRoom.tsx
